
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs-visual-tool"  # 包的名称，可以包含连字符
version = "0.1.1"
description = "A tool for visualizing data with GraphScope Engine"
authors = [
  { name="pomelo-nwu", email="czynwu@outlook.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
   "ipython>=8.27.0",
    "flask>=3.0.3"
]

[tool.setuptools]
packages = ["gs_visual_tool"]  # 指定包目录，使用下划线
include-package-data = true

[tool.setuptools.package-data]
gs_visual_tool = ["template/*.html"]

 

 